changed merging grades to use stream.reduce()